Changelog
=========

4.20-dev - (unreleased)
-----------------------
 * Bug fix: patched plone.app.redirector to also redirect direct file download
   links (e.g. at_download/fileField) when the containing object defines an alias
   [ghicaale]

4.19 - (2012-03-06)
-------------------
 * Change: remove code that checks for IEEAPloneSite when saving disk resources
   [tiberich]

4.18 - (2012-03-05)
-------------------
 * Upgrade step: dascalu + tiberich: install eea.munin on ape, link
   its plugins into the ape munin [tiberich #4955]
 * Upgrade step: dascalu + tiberich: on each squirrel, install the
   plugins in munin-scripts in munin [tiberich #4955]
 * Bug fix: Updated collective.quickupload patch according with the latest
   changes
   [voineali #4965]
 * Bug Fix: updated all xlsx and docx to new mime type. [demarant #4957]
 * Feature: added external method for deleted old never published objects
   [demarant]
 * Change: added override for munin browser views to make them public
   [tiberich #4955]
 * Feature: only do saving of resources on disk in the context of EEA Plone site
   [tiberich]

4.17 - (2012-02-14)
-------------------
 * Bug fix: fixed a problem with broken HTML generated after saving with TinyMCE
   [ghicaale #4945]
 * Upgrade step: under @@manage-viewlets resave position of viewlets in order
   to be saved for EEADesign2006 skin too [ghicaale #4939]
 * Bug fix: patch for plone.app.viewletmanager to save viewlets order for both skins
   [ghicaale #4939]
 * Bug fix: added cache headers to multimedia_popup_view.pt
   [ghicaale #4930]
 * Bug fix: fix clear registry import setup step
   [tiberich #4933]
 * Bug fix: plone4 compatibility, use zope.lifecycleevent in setupmethods used for maintenance
   [demarant]
 * Bug fix: patch cookResources for ResourceRegistries tools to always trigger save resources
   [tiberich #4933]
 * Code cleanup
   [tiberich]

4.16 - (2012-02-06)
-------------------